[package]
name = "crab_sweeper"
version = "0.1.0"
authors = ["SethRAH <srahare@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
#profiling = ["cpuprofiler"]

[dependencies]
ggez = "^0.6"
glam = { version = "0.12", features = ["mint"]}
oorandom = "11"
getrandom = "0.2"